Improved sample for turbopower_ipro package
 SVN 7410@trunk

--- a/examples/turbopower_ipro/index.html
+++ b/examples/turbopower_ipro/index.html
@@ -8,7 +8,19 @@
 <body>
 Lazarus example for IPro HTML control.<br>
 <br>
-<img src="../../images/lazarus.bmp" title="" alt="Lazarus image"
+Image ../../docs/images/cheetah1.png
+<br>
+<img src="../../docs/images/cheetah1.png" title="" alt="cheetah.png image"
+ style="width: 250px; height: 188px;"><br>
+<br>
+Image ../../docs/images/laztitle.jpg
+<br>
+<img src="../../docs/images/laztitle.jpg" title="" alt="laztitle.jpg image"
+ style="width: 250px; height: 188px;"><br>
+<br>
+Image broken
+<br>
+<img src="../../docs/images/cheetah2.png" title="" alt="cheetah.png image"
  style="width: 250px; height: 188px;"><br>
 <br>
 <a href="simplepage2.html">Link</a><br>
